--- a/drinks/index.html
+++ b/drinks/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sponsor</title>
